Removed unneeded JAVA_OPTS